# drink

./: CMakeLists.txt  DispensingScreen.qml  DrinkSizeSelectionPage.qml  DrinkTypePage.qml  FinishScreen.qml  HotColdSelectionPage.qml  Main.qml  StatusBar.qml  main.cpp
.github/workflows/: ubuntu.yml
linux/: planets-qml.desktop
